# Terps-Racing-Baja-Simulator

./: CMakeLists.txt  CVT Derivation.md  Kohler CH440 Torque Curve.xlsx  TODO.txt  gear ratio optimization.md  license.txt  readme.md  secondary.m
References/: Gaged CVT Parts.csv
References/WVU CVT Sim/: BeltV2.m  CVT Constants 2.xlsx  EngagementV2.m  PrimaryV3.m  SecondaryV3.m  ShiftV8.m  cvt_sim.m
data/: ramp.xlsx  shift_graph.m  shift_wrap_dist.csv  shift_wrap_inv_dist.csv  shift_wrap_new.csv  vd_data_bad_mass.xlsx  vd_data_mu=0.6.xlsx  vd_data_no_slip.xlsx
data/tunes/: tunes.csv
include/: csv.hpp  opt.hpp  orbitcam.hpp  raygraph.hpp  trb.hpp  util.hpp
raylib-5.0/: desktop.ini
src/: basic_sim.cpp  csv.cpp  cvt.cpp  main.cpp  opt.cpp  opt_accuracy.cpp  opt_cvt_tune.cpp  opt_gear_ratio.cpp  orbitcam.cpp  purgatory.cpp  raygraph.cpp  shift_visualizer.cpp  test.cpp  test_csv.cpp  trb.cpp  util.cpp  vehicle_graph.cpp  visualizer.cpp
